--- a/.github/workflows/cover-agent-ci.yml
+++ b/.github/workflows/cover-agent-ci.yml
@@ -9,7 +9,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: "0"
-
+      - name: Configure Git to use PAT
+        shell: sh
+        run: git config --global url."https://${{ secrets.GH_TOKEN }}@github.com/".insteadOf "https://github.com/"
       - name: Self test
         id: selftest
         # Put your action repo here
