--- a/.github/workflows/cover-agent-ci.yml
+++ b/.github/workflows/cover-agent-ci.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Self test
         id: selftest
         # Put your action repo here
-        uses: razorpay/armory/TestGen-llm/TestGen-cover-agent-ci@TestGen-llm
+        uses: kousikmitra/cover-agent-ci@main
         env:
           githubToken: ${{ secrets.GH_TOKEN }}
         with:
